<resources>
    <string name="app_name">phase2</string>
    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">757376028331579</string>
    <string name="fb_login_protocol_scheme">fb757376028331579</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register">Register</string>
    <string name="logIn">Log In</string>
    <string name="exit">Exit</string>
    <string name="Password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="don_t_remember_the_password">Don\'t Remember The Password?</string>
    <string name="sign_in_with_facebook">Sign In With Facebook</string>
    <string name="or">or</string>
    <string name="sign_up">sign up</string>
    <string name="back_to_login">back to login</string>
    <string name="don_t_have_an_account_yet">Don\'t Have An Account Yet?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="expand_wish_to_lend">EXPAND WISH TO LEND</string>
    <string name="REQUEST_ADDING_ITEM">REQUEST ADDING ITEM</string>
    <string name="confirm_transactions">CONFIRM TRANSACTIONS</string>
    <string name="view_market">VIEW MARKET</string>
    <string name="pending_request">PENDING REQUEST</string>
    <string name="view_suspicous_users">VIEW SUSPICOUS USERS</string>
    <string name="view_frozen_users_and_unfreeze_users">View Frozen users and Unfreeze users</string>
    <string name="approve_new_item_requests">Approve new item requests</string>
    <string name="change_threshold">Change threshold</string>
    <string name="add_new_admins">Add new admins</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_regular_settings">RegularSettingsActivity</string>
    <string name="log_out">log out</string>
    <string name="change_password">change password</string>
    <string name="settings">settings</string>
    <string name="new_password">New Password</string>
    <string name="confirm">confirm</string>
    <string name="user_info">user info</string>
    <string name="inventory">inventory</string>
    <string name="wish_list">wish list</string>
    <string name="willing_to_lend">willing to lend</string>
    <string name="email">Email</string>
    <string name="title_activity_test_login">TestActivityLoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_view_market">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string-array name="types">
        <item>Temporary</item>
        <item>Permanent</item>
    </string-array>
    <string name="title_activity_regular_user_menu_settings">RegularUserMenuSettingsActivity
    </string>
    <string name="set_up_your_status_to_be_busy_so_that_when_others_want_to_have_a_trade_with_you_this_system_will_let_them_know_that_you_have_limited_availability_your_infotmation_in_the_market_will_be_hidden">Set up your Status To be Busy so that the system will know you are unavailable for any trades. Your wish to lend list and wish to borrow list will be set empty</string>
    <string name="busy">Busy</string>
    <string name="setting_status">Setting Status</string>
    <string name="go_back">Go Back</string>
    <string name="your_account_status_available">Your account status: AVAILABLE</string>
    <string name="your_trading_status_available">Your trading status: AVAILABLE</string>
    <string name="set_your_account_status_to_on_vacation_so_that_your_information_will_be_hidden_from_the_market">Set Your Account Status to \'On Vacation\' So That Your Information Will be Hidden From the Market</string>
    <string name="adminUserCreateUsername">Create  AdminUser username</string>
    <string name="adminUserPasswordCreate">Create Adminuser password</string>
    <string name="confirm_adding">Confirm Adding</string>
    <string name="title_activity_admin_user_adding">AdminUserAddingActivity</string>
    <string name="title_activity_adding_admin_acrivity">addingAdminAcrivity</string>
    <string name="the_regular_user_is_going_to_be_frozen">The regular user is going to be frozen</string>
    <string name="behaviour">Behaviour</string>
    <string name="status">Status</string>
    <string name="unfreeze_this_user">Unfreeze this user</string>
    <string name="cancel">Cancel</string>
    <string name="we_note_that_your_account_is_frozen_please_submit_unfreeze_request_here">We note that your account is frozen. Please submit unfreeze request here</string>
    <string name="submit">Submit</string>

</resources>