<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/admin_menu_bg"
    tools:context=".activities.AdminSettingsActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <TextView
        android:layout_width="205dp"
        android:layout_height="85dp"
        android:fontFamily="@font/bebasneue"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/off_white"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_guide"
        app:layout_constraintStart_toStartOf="@+id/left_guide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />


    <Button
        android:id="@+id/button_Add_New_Admin"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="232dp"
        android:layout_height="60dp"
        android:backgroundTint="#00FFFFFF"
        android:drawableStart="@drawable/person_add_icon"
        android:drawableLeft="@drawable/person_add_icon"
        android:ems="10"
        android:fontFamily="@font/bebasneue"
        android:text="@string/add_new_admins"
        android:textColor="@color/off_white"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_guide"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/left_guide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265" />

    <Button
        android:id="@+id/button_Change_Threshold"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="232dp"
        android:layout_height="60dp"
        android:backgroundTint="#00FFFFFF"
        android:drawableLeft="@drawable/threshold_icon"
        android:ems="10"
        android:fontFamily="@font/bebasneue"
        android:text="@string/change_threshold"
        android:textColor="@color/off_white"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_guide"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/left_guide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/button_Admin_Change_Password"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="232dp"
        android:layout_height="60dp"
        android:backgroundTint="#00FFFFFF"
        android:drawableLeft="@drawable/edit_icon"
        android:ems="10"
        android:fontFamily="@font/bebasneue"
        android:text="@string/change_password"
        android:textColor="@color/off_white"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_guide"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/left_guide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381" />

    <Button
        android:id="@+id/button_Admin_Log_Out"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="232dp"
        android:layout_height="60dp"
        android:backgroundTint="#00FFFFFF"
        android:drawableLeft="@drawable/exit_to_app_icon"
        android:ems="10"
        android:fontFamily="@font/bebasneue"
        android:text="@string/log_out"
        android:textColor="@color/off_white"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_guide"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/left_guide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619" />

    <Button
        android:id="@+id/button_Admin_Setting_Back"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/backward_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />


</androidx.constraintlayout.widget.ConstraintLayout>